# alfaops

./: CMakeLists.txt  Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.js  websocket_messages.txt
.github/workflows/: release.yml
assets/bash-command/: alfaopsdockercommands.txt  alfaopslinuxvm.txt
assets/modbus_tcp_server/: Dockerfile  modbus_server.py  tcp_server.py
assets/mongodb-docker/: Dockerfile  entrypoint.sh
docs/Client-Files/Logs/: Heading Sensor 1.txt  Helium Sensor.txt
docs/Client-Files/Phase-I/Logs/: Ballonet Sensor.txt  Weather Station.txt
docs/Client-Files/Phase-I/Source/AerostatGUI_GCS_ver2.1 Fedora_Fixed CMD/: AerostatGCS  AerostatGCS.ini  AerostatGCS.pro  AerostatGCS_debug  DataLog.cpp  Debug.h  Interface.h  Makefile.Debug  main.cpp  updates
docs/Client-Files/Phase-I/Source/AerostatGUI_GCS_ver2.1 Fedora_Fixed CMD/GUI/: BallonetPressure.cpp  BallonetPressure.h  GCSMainWindow.cpp  GCSMainWindow.h  GCSMainWindow.ui  Pitch.h
docs/Client-Files/Phase-II/Python-Source/: AlfaOPSBELite7.0.py
docs/Client-Files/Source/AerostatGUI_GCS_ver2.1 Fedora_Fixed CMD/: AerostatGCS.pro~  DataLog.h  Interface.cpp  Makefile  Makefile.Release  ping_res.txt  ui_GCSMainWindow.h
docs/Client-Files/Source/AerostatGUI_GCS_ver2.1 Fedora_Fixed CMD/GUI/: Roll.cpp  WindSpeed.cpp
docs/Client-Files/Source/AerostatGUI_GCS_ver2.1 Fedora_Fixed CMD/debug/: moc_BallonetPressure.cpp  moc_ConfluencePointTension.cpp  moc_DataLog.cpp  moc_Interface.cpp
docs/Client-Files/Source/AerostatGUI_GCS_ver2.1 Fedora_Fixed CMD/release/: moc_HeliumPressure.cpp  moc_WindSpeed.cpp
include/alfaUtil/: alfaInfo.h  alfaUtilVersion.h  create_version_header.sh
include/applicationHandler/: apiMethod.h  applicationHandler.h
include/configManager/: configFormatter.h  configManager.h
include/databaseFactory/: Database.h  DatabaseFactory.h
include/databases/: LocalDatabase.h  MongoDBDatabase.h
include/logger/: cloudLogger.h  log_file.h  logger.h  trace_util.h
include/messageHandler/: messageHandler.h
include/protocolBase/: CommunicationProtocol.h  CommunicationProtocolFactory.h  ProtocolEvents.h
include/protocols/: WebsocketProtocol.h
include/sensorsManager/base/: modbusConnectionManager.h  sensorBase.h  sensorFactory.h  sensorManager.h  tcpConnectionManager.h
include/sensorsManager/sensors/commonSensorData/: commonSensorData.h  modbusSensorsDef.h  sensorsDef.h  tcpSensorsDef.h
include/sensorsManager/sensors/modbus/: ahrsMod.h  avionicsEnvMod.h  ballonetCurtainMod.h  ballonetPressureMod.h  hullPressureMod.h  loadcellMod.h  relayMod.h  weatherStationMod.h
include/sensorsManager/sensors/tcp/: adamSensorTcp.h  ballonetPressureTcp.h  digitalCompassTcp.h  fanLightTcp.h  helliumPressureTcp.h  weatherStationTcp.h
src/: App.jsx  Js_parsing.js  ThemeHandler.jsx  constant.js  i18n.jsx  main.cpp  main.jsx  utils.js
src/alfaUtil/: alfaInfo.cpp
src/applicationHandler/: apiMethod.cpp  applicationHandler.cpp
src/common/: ChartChip.jsx  ChartsData.jsx  ChildCard.jsx  MainCard.jsx  OptionBox.jsx  StatusChip.jsx
src/components/: Header.jsx  Home2.jsx  Modal.jsx  RollMeter.jsx  compass.jsx
src/components/New-Components/: Header.jsx  Home.jsx  LineChart.jsx  NewCompass.jsx  NewRollMeter.jsx  RightSidebar.jsx  Sidebar.jsx
src/components/map/: Map.jsx
src/configManager/: configManager.cpp
src/databaseFactory/: DatabaseFactory.cpp
src/databases/: LocalDatabase.cpp  MongoDBDatabase.cpp
src/locals/: ar.js  en.js
src/logger/: log_file.cpp  logger.cpp
src/phase_1/: index.jsx  phase1.css  phase2Data.js
src/phase_2/: index.jsx  phase2.css
src/protocolBase/: CommunicationProtocolFactory.cpp
src/protocols/: WebsocketProtocol.cpp
src/sensorManager/base/: tcpConnectionManager.cpp
src/styles/: old.css  test.css  test2.css
(+19 files in other folders)
